--- a/apps/api/src/configuration/filters/sheet_name.yaml
+++ b/apps/api/src/configuration/filters/sheet_name.yaml
@@ -13,7 +13,7 @@ rules:
       - circle
       - rounded
     conditions:
-      relationMode: and
+      relationMode: AND
       conditions:
         - attribute: item.attributes.reseller
           operator: ===
