--- a/apps/api/src/configuration/filters/size.yaml
+++ b/apps/api/src/configuration/filters/size.yaml
@@ -25,7 +25,7 @@ rules:
       - 5" x 3"
       - 8" x 4"
     conditions:
-      relationMode: and
+      relationMode: AND
       conditions:
         - attribute: item.attributes.imperial_units
           operator: ===
@@ -34,7 +34,7 @@ rules:
   - keys:
       - 30x20 cm
     conditions:
-      relationMode: and
+      relationMode: AND
       conditions:
         - attribute: item.productName
           operator: ===
@@ -43,7 +43,7 @@ rules:
   - keys:
       - 11.8" x 7.9"
     conditions:
-      relationMode: and
+      relationMode: AND
       conditions:
         - attribute: item.attributes.imperial_units
           operator: ===
@@ -58,7 +58,7 @@ rules:
       - 5.1x2.5 cm
       - 7.7x3.8 cm
     conditions:
-      relationMode: and
+      relationMode: AND
       conditions:
         - attribute: item.attributes.laminate
           operator: ===
@@ -70,7 +70,7 @@ rules:
       - 2" x 1"
       - 3" x 1.5"
     conditions:
-      relationMode: and
+      relationMode: AND
       conditions:
         - attribute: item.attributes.laminate
           operator: ===
@@ -87,9 +87,9 @@ rules:
       - 100x70 cm
       - 120x80 cm
     conditions:
-      relationMode: and
+      relationMode: AND
       conditions:
-        - relationMode: or
+        - relationMode: OR
           conditions:
             - attribute: item.attributes.material
               operator: ===
@@ -109,9 +109,9 @@ rules:
       - 40" x 20"
       - 46" x 25"
     conditions:
-      relationMode: and
+      relationMode: AND
       conditions:
-        - relationMode: or
+        - relationMode: OR
           conditions:
             - attribute: item.attributes.material
               operator: ===
@@ -122,7 +122,7 @@ rules:
             - attribute: item.productName
               operator: ===
               value: floor
-        - relationMode: or
+        - relationMode: OR
           conditions:
             - attribute: item.attributes.imperial_units
               operator: ===
@@ -133,7 +133,7 @@ rules:
       - A5 paper <br> 5.8" x 8.3",
       - Thank you card <br> 5.1" x 6.4"
     conditions:
-      relationMode: and
+      relationMode: AND
       conditions:
         - attribute: item.attributes.imperial_units
           operator: ===
@@ -147,7 +147,7 @@ rules:
       - 14.8x21 cm
       - 13x16.3 cm
     conditions:
-      relationMode: and
+      relationMode: AND
       conditions:
         - attribute: item.attributes.imperial_units
           operator: ===
@@ -160,7 +160,7 @@ rules:
       - 3" x 4"
       - 3.5" x 5"
     conditions:
-      relationMode: and
+      relationMode: AND
       conditions:
         - attribute: item.attributes.imperial_units
           operator: ===
@@ -173,7 +173,7 @@ rules:
       - 7.6x10.1 cm
       - 8.9x12.7 cm
     conditions:
-      relationMode: and
+      relationMode: AND
       conditions:
         - attribute: item.attributes.imperial_units
           operator: ===
