Fix transfer_decal config - Feature was not configured as multivalue

--- a/apps/api/src/configuration/products/transfer_decal.yaml
+++ b/apps/api/src/configuration/products/transfer_decal.yaml
@@ -4,5 +4,6 @@ available: true
 attributes:
 #   sheet_type: single
 #   delivery: sheet
-  feature: transfer_tape
+  feature: 
+  - transfer_tape
   
