Added functionality to include multiple collections of the same type in a service

--- a/apps/api/src/configuration/services/stickerapp.yaml
+++ b/apps/api/src/configuration/services/stickerapp.yaml
@@ -8,9 +8,13 @@ families:
   - promo
 #   - fee
 collections:
-  filter: sticker_wizard_filters
-  constraint: sticker_production
-  asset: sticker_assets
+  filter: 
+    - sticker_wizard_filters
+  constraint: 
+    - sticker_production
+    - promo_production
+  asset: 
+    - sticker_assets
 attributes:
   - sheet_type
   - sheet_name
