--- a/apps/api/src/configuration/products/labels_on_sheet.yaml
+++ b/apps/api/src/configuration/products/labels_on_sheet.yaml
@@ -2,7 +2,7 @@ name: labels_on_sheet
 sku: LOSSDS-108
 available: true
 attributes:
-  sheet_type: sheet
+  sheet_type: single
   delivery: sheet
   
   
