--- a/.github/workflows/emporio-nomisma-publish.yml
+++ b/.github/workflows/emporio-nomisma-publish.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build javascript
-        run: npm build
+        run: npm run build
       - name: Publish package
         run: |
           cd dist
