--- a/.github/workflows/emporio-nomisma-publish.yml
+++ b/.github/workflows/emporio-nomisma-publish.yml
@@ -39,6 +39,7 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@stickerapp-org'
+      - run: cd packages/nomisma
       - name: Install dependencies
         run: npm ci
       - name: Build javascript
