--- a/.github/workflows/emporio-nomisma-publish.yml
+++ b/.github/workflows/emporio-nomisma-publish.yml
@@ -39,9 +39,8 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@stickerapp-org'
-      - run: cd packages/nomisma
       - name: Install dependencies
-        run: npm ci
+        run: cd packages/nomisma && npm ci
       - name: Build javascript
         run: npm run build
       - name: Publish package
