--- a/.github/workflows/emporio-nomisma-publish.yml
+++ b/.github/workflows/emporio-nomisma-publish.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build javascript
-        run: npm run build -w @stickerapp-org/nomisma
+        run: npm run build
       - name: Publish package
         run: |
           npm publish -w @stickerapp-org/nomisma
