--- a/packages/nomisma/package.json
+++ b/packages/nomisma/package.json
@@ -38,6 +38,7 @@
 		}
 	},
 	"devDependencies": {
+		"@stickerapp-org/ts-transform-module-type": "*",
 		"typescript": "^5.4.5",
 		"concurrently": "^8.2.2",
 		"rimraf": "^5.0.5"
