--- a/.github/workflows/emporio-nomisma-publish.yml
+++ b/.github/workflows/emporio-nomisma-publish.yml
@@ -18,7 +18,7 @@ jobs:
         id: version
         run: |
           registry_version=$(npm view @stickerapp-org/nomisma version 2>/dev/null || echo "not_found")
-          package_version=$(npm pkg get version | tr -d '"')
+          package_version=$(npm pkg get version -w @stickerapp-org/nomisma | jq -r '."@stickerapp-org/nomisma"')
           echo "package_version=$package_version" >> $GITHUB_OUTPUT
 
           # Check if the registry_version was not found
