--- a/.github/workflows/emporio-nomisma-publish.yml
+++ b/.github/workflows/emporio-nomisma-publish.yml
@@ -37,6 +37,8 @@ jobs:
               exit 0
             fi
           fi
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Install dependencies
         run: npm ci
       - name: Build javascript
