--- a/.github/workflows/emporio-nomisma-publish.yml
+++ b/.github/workflows/emporio-nomisma-publish.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Check version
         id: version
         run: |
-          registry_version=$(npm view @stickerapp-org/nomisma version)
+          registry_version=$(npm view @stickerapp-org/nomisma version 2>/dev/null || echo "not_found")
           package_version=$(npm pkg get version -w @stickerapp-org/nomisma | jq -r '."@stickerapp-org/nomisma"')
           echo "package_version=$package_version" >> $GITHUB_OUTPUT
 
@@ -34,7 +34,7 @@ jobs:
             # Compare the versions
             if [ "$registry_version" = "$package_version" ]; then
               echo "The version you are trying to publish already exists. Bump the version and publish again. Exiting workflow."
-              exit 0
+              exit 1
             fi
           fi
         env:
