Add node_auth_token to build pipeline

--- a/.github/workflows/emporio-build-docker.yml
+++ b/.github/workflows/emporio-build-docker.yml
@@ -38,8 +38,8 @@ jobs:
           tags: ${{ env.repository }}:${{ env.docker_tag }},${{ env.repository }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          # build-args: |
-          #   NODE_AUTH_TOKEN=${{secrets.NODE_AUTH_TOKEN}}
+          build-args: |
+           NODE_AUTH_TOKEN=${{secrets.NODE_AUTH_TOKEN}}
       - name: Notify Slack
         uses: ravsamhq/notify-slack-action@v2
         if: always()
