Remove sourcemap from nomisma

--- a/packages/nomisma/tsconfig.json
+++ b/packages/nomisma/tsconfig.json
@@ -3,7 +3,7 @@
 	"compilerOptions": {
 		"outDir": "dist/cjs",
 		"baseUrl": "./src",
-		"sourceMap": true,
+		"sourceMap": false,
 		"moduleResolution": "Node",
 		"declaration": true,
 		"strict": true,
