Fix laminate filter keys for kraft_thin

--- a/apps/api/configuration/filters/laminate.yaml
+++ b/apps/api/configuration/filters/laminate.yaml
@@ -157,7 +157,7 @@ rules:
             - labels_on_roll
 
   - keys:
-      - uncoted
+      - uncoated
     conditions:
       relationMode: AND
       baseComplexityScore: 1001
