--- a/apps/api/configuration/filters/max_size_mm.yaml
+++ b/apps/api/configuration/filters/max_size_mm.yaml
@@ -2,7 +2,7 @@ name: max_size_mm
 mode: highest_score_wins
 rules:
   - keys:
-      - laser
+      - "{MaxSizes.LASER}"
     conditions:
       relationMode: AND
       conditions:
@@ -22,7 +22,7 @@ rules:
                 - sheet_kiss_cut
 
   - keys:
-      - sheet_legacy
+      - "{MaxSizes.SHEET_LEGACY}"
     conditions:
       relationMode: AND
       conditions:
@@ -32,7 +32,7 @@ rules:
             - sheet_legacy
 
   - keys:
-      - roll
+      - "{MaxSizes.ROLL}"
     conditions:
       relationMode: AND
       conditions:
