--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@stickerapp-org/eslint-config",
-  "main": ".eslintrc.cjs",
+  "main": ".eslintrc.cjs",    
+  "version": "1.0.0",
   "scripts": {
     "lint": "prettier --check .",
     "format": "prettier --write ."
@@ -8,12 +9,12 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^9.3.0",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-svelte": "^2.30.0"
   },
-  "devDependencies": {
-    "@stickerapp-org/prettier-config": "*"
+  "devDependencies": { 
+    "@stickerapp-org/prettier-config": "*" 
   }
 }
