--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -8,7 +8,7 @@
         "preview": "vite preview",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-        "test": "vitest",
+        "test": "vitest --passWithNoTests",
         "lint": "prettier --check . && eslint .",
         "format": "prettier --write ."
     },
@@ -16,11 +16,11 @@
         "@fontsource/fira-mono": "^4.5.10",
         "@neoconfetti/svelte": "^1.0.0",
         "@sinclair/typebox": "0.32.13",
-        "@stickerapp-org/eslint-config": "*",
         "@stickerapp-org/emporio-api-contract": "*",
+        "@stickerapp-org/eslint-config": "*",
+        "@stickerapp-org/pallas": "*",
         "@stickerapp-org/prettier-config": "*",
         "@stickerapp-org/tailwind-config": "*",
-        "@stickerapp-org/pallas": "*",
         "@sveltejs/adapter-node": "^5.2.2",
         "@sveltejs/kit": "^2.5.26",
         "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
@@ -38,7 +38,7 @@
         "svelte-check": "^3.6.0",
         "tailwindcss": "^3.4.1",
         "tslib": "^2.4.1",
-        "typescript": "^5.3.3",
+        "typescript": "^5.5.4",
         "vite": "^5.0.3",
         "vitest": "^1.0.0"
     },
