--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,19 +1,19 @@
 {
-  "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "outDir": "dist",
-    "baseUrl": "./src",
-    "sourceMap": true,
-    "moduleResolution": "NodeNext",
-    "declaration": true,
-    "strict": true,
-    "module": "NodeNext",
-    "target": "ES6",
-    "paths": {
-      "$app/*": ["./app/*"],
-      "$data/*": ["./data/*"],
-      "$/*": ["./*"]
-    },
-    "plugins": [{ "transform": "typescript-transform-paths" }]
-  },
+    "extends": "@stickerapp-org/emporio-tsconfig/tsconfig.json",
+    "compilerOptions": {
+        "outDir": "dist",
+        "baseUrl": "./src",
+        "sourceMap": true,
+        "moduleResolution": "NodeNext",
+        "declaration": true,
+        "strict": true,
+        "module": "NodeNext",
+        "target": "ES6",
+        "paths": {
+            "$app/*": ["./app/*"],
+            "$data/*": ["./data/*"],
+            "$/*": ["./*"]
+        },
+        "plugins": [{ "transform": "typescript-transform-paths" }]
+    }
 }
