--- a/packages/api-contract/package.json
+++ b/packages/api-contract/package.json
@@ -48,6 +48,7 @@
         "@stickerapp-org/ts-transform-module-type": "*",
         "concurrently": "^8.2.2",
         "rimraf": "^5.0.5",
-        "typescript": "5.5.4"
+        "typescript": "5.5.4",
+        "@stickerapp-org/emporio-tsconfig": "*"
     }
 }
