--- a/packages/ts-transform-module-type/tsconfig.json
+++ b/packages/ts-transform-module-type/tsconfig.json
@@ -1,13 +1,13 @@
 {
-  "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "outDir": "dist",
-    "baseUrl": "./src",
-    "sourceMap": true,
-    "moduleResolution": "Node",
-    "declaration": true,
-    "strict": true,
-    "module": "CommonJS",
-    "target": "ES5"
-  }
+    "extends": "@stickerapp-org/emporio-tsconfig/tsconfig.json",
+    "compilerOptions": {
+        "outDir": "dist",
+        "baseUrl": "./src",
+        "sourceMap": true,
+        "moduleResolution": "Node",
+        "declaration": true,
+        "strict": true,
+        "module": "CommonJS",
+        "target": "ES5"
+    }
 }
