--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -38,7 +38,7 @@
         "svelte-check": "^3.6.0",
         "tailwindcss": "^3.4.1",
         "tslib": "^2.4.1",
-        "typescript": "^5.5.4",
+        "typescript": "5.5.4",
         "vite": "^5.0.3",
         "vitest": "^1.0.0"
     },
