--- a/package.json
+++ b/package.json
@@ -1,46 +1,31 @@
 {
-	"name": "@stickerapp-org/emporio",
-	"private": true,
-	"scripts": {
-		"build": "turbo build",
-		"dev": "turbo dev",
-		"lint": "turbo lint",
-		"test": "turbo test",
-		"format": "prettier --write \"**/*.{ts,tsx,md,svelte}\"",
-		"generate-migration": "npm run generate-migration -w @stickerapp-org/emporio-api",
-		"migrate": "npm run migrate -w @stickerapp-org/emporio-api",
-		"prepare": "ts-patch install -s"
-	},
-	"devDependencies": {
-		"@sinclair/typebox": "0.32.13",
-		"@stickerapp-org/eslint-config": "*",
-		"@types/js-yaml": "^4.0.9",
-		"@types/node": "^20.11.1",
-		"cross-env": "^7.0.3",
-		"pino-pretty": "^10.3.1",
-		"prettier": "^3.1.1",
-		"svelte": "5.0.0-next.52",
-		"ts-node": "^10.9.2",
-		"ts-node-dev": "^2.0.0",
-		"ts-patch": "^3.1.2",
-		"turbo": "^2.1.0",
-		"typescript": "^5.5.4",
-		"typescript-transform-paths": "^3.4.11"
-	},
-	"overrides": {
-		"@sinclair/typebox": "$@sinclair/typebox"
-	},
-	"engines": {
-		"node": ">=18"
-	},
-	"packageManager": "npm@9.6.7",
-	"workspaces": [
-		"apps/*",
-		"packages/*"
-	],
-	"dependencies": {
-		"dotenv": "^16.3.1",
-		"js-yaml": "^4.1.0",
-		"pino": "^8.19.0"
-	}
+    "name": "@stickerapp-org/emporio",
+    "private": true,
+    "scripts": {
+        "build": "turbo build",
+        "dev": "turbo dev",
+        "lint": "turbo lint",
+        "test": "turbo test",
+        "format": "prettier --write \"**/*.{ts,tsx,md,svelte}\"",
+        "generate-migration": "npm run generate-migration -w @stickerapp-org/emporio-api",
+        "migrate": "npm run migrate -w @stickerapp-org/emporio-api",
+        "prepare": "ts-patch install -s"
+    },
+    "devDependencies": {
+        "@sinclair/typebox": "0.32.13",
+        "ts-patch": "^3.1.2",
+        "turbo": "^2.1.0"
+    },
+    "overrides": {
+        "@sinclair/typebox": "$@sinclair/typebox"
+    },
+    "engines": {
+        "node": ">=18"
+    },
+    "packageManager": "npm@9.6.7",
+    "workspaces": [
+        "apps/*",
+        "packages/*"
+    ],
+    "dependencies": {}
 }
